[gd_scene load_steps=6 format=3 uid="uid://dy62mlujliu06"]

[ext_resource type="Script" path="res://platform.gd" id="1_0nutd"]
[ext_resource type="Texture2D" uid="uid://cki1k8yqjyj0" path="res://Art/Platform_nomal.png" id="2_vpn82"]
[ext_resource type="Texture2D" uid="uid://dtyt7kyitsgm2" path="res://Art/Platform_cracked1.png" id="3_sppj6"]
[ext_resource type="Texture2D" uid="uid://cee4gfwa1udnq" path="res://Art/Platform_cracked2.png" id="4_ox5mg"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uemd6"]
size = Vector2(336, 75)

[node name="Platform" type="StaticBody2D"]
scale = Vector2(0.35, 0.35)
script = ExtResource("1_0nutd")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(239, 81.5)
shape = SubResource("RectangleShape2D_uemd6")
one_way_collision = true

[node name="PlatformNomal" type="Sprite2D" parent="."]
position = Vector2(249, 79)
texture = ExtResource("2_vpn82")

[node name="PlatformCracked1" type="Sprite2D" parent="."]
visible = false
position = Vector2(246, 80)
texture = ExtResource("3_sppj6")

[node name="PlatformCracked2" type="Sprite2D" parent="."]
visible = false
position = Vector2(243, 90)
texture = ExtResource("4_ox5mg")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(239, 81.5)
scale = Vector2(1.09, 1.09)
shape = SubResource("RectangleShape2D_uemd6")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
